--- a/RemotePartyFinder/RemotePartyFinder.csproj
+++ b/RemotePartyFinder/RemotePartyFinder.csproj
@@ -52,6 +52,7 @@
 
     <ItemGroup>
         <PackageReference Include="DalamudPackager" Version="14.0.1" />
+        <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="9.0.4" />
     </ItemGroup>
 
 </Project>
