--- a/RemotePartyFinder/RemotePartyFinder.yaml
+++ b/RemotePartyFinder/RemotePartyFinder.yaml
@@ -1,7 +1,7 @@
 author: Ayumudayo
-name: Remote Party Finder Reborn Uploader
+name: Report Partry Finder Reborn Uploader
 description: |-
-  Uploads the PF listings you retrieve to the crowdsourced Remote Party Finder website.
+  Uploads the PF listings you retrieve to the crowdsourced Report Partry Finder Reborn website.
   Original by 086 and Anna.
 punchline: Crowdsourced PF website (upload PF listings to website)
 repo_url: https://github.com/Ayumudayo/RemotePartyFinderReborn-Plugin/
