--- a/RemotePartyFinder/RemotePartyFinder.csproj
+++ b/RemotePartyFinder/RemotePartyFinder.csproj
@@ -3,6 +3,9 @@
     <PropertyGroup>
         <Version>1.0.18</Version>
         <TargetFramework>net10.0-windows</TargetFramework>
+        <PlatformTarget>x64</PlatformTarget>
+        <Platforms>x64</Platforms>
+        <Prefer32Bit>false</Prefer32Bit>
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
