--- a/RemotePartyFinder/RemotePartyFinder.csproj
+++ b/RemotePartyFinder/RemotePartyFinder.csproj
@@ -55,6 +55,7 @@
 
     <ItemGroup>
         <PackageReference Include="DalamudPackager" Version="14.0.1" />
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.4" />
         <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="9.0.4" />
     </ItemGroup>
 
