feat(plugin): auto-finish scanner and paginate across PF pages

--- a/RemotePartyFinder/RemotePartyFinder.csproj
+++ b/RemotePartyFinder/RemotePartyFinder.csproj
@@ -51,6 +51,10 @@
           <HintPath>$(DalamudLibPath)\FFXIVClientStructs.dll</HintPath>
           <Private>false</Private>
         </Reference>
+        <Reference Include="InteropGenerator.Runtime">
+          <HintPath>$(DalamudLibPath)\InteropGenerator.Runtime.dll</HintPath>
+          <Private>false</Private>
+        </Reference>
     </ItemGroup>
 
     <ItemGroup>
