--- a/RemotePartyFinder/RemotePartyFinder.csproj
+++ b/RemotePartyFinder/RemotePartyFinder.csproj
@@ -63,4 +63,8 @@
         <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="9.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
+    </ItemGroup>
+
 </Project>
